[project]
name = "mitre-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jq>=1.11.0",
    "jupyter>=1.1.1",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "ollama>=0.6.2",
    "sentence-transformers>=5.4.1",
]
